# gbdt-stock-agent-news

./: .gitignore  README.md  pyproject.toml
conf/: cost_model.yaml  default.yaml  ops_policy.yaml  smoke_local.yaml  smoke_news_local.yaml  smoke_news_recent.yaml  universe_custom.yaml  universe_sp500.yaml
conf/experiments/: default_feat_lag120_ext1.yaml  default_feat_lag120_ext2.yaml  default_feat_lag120_ext3.yaml  news_recent_feature_01_news_on_h20_lb_1_3_5_10_20_60_120.yaml  news_recent_feature_01_news_on_lb_1_5_20_60_120.yaml  news_recent_feature_02_news_off_h20_lb_1_3_5_10_20_60_120.yaml  news_recent_feature_03_news_on_lb_1_5_20_60.yaml  (+20 more)
notebooks/: gbdt_stock_agent_colab.ipynb
reports/: bundle_manifest_restored.json  feature_search_news_recent_results.json  feature_search_news_recent_results.md  feature_search_prod_20260221.md  feature_search_smoke_results.json  feature_search_smoke_results.md  git_diff_20260221_161951Z.patch  git_diff_stat_20260221_161951Z.txt  local_vs_colab_comparison.md  news_feature_effectiveness_20260221.md
scripts/: codex_review.sh  feature_search_news_recent.py  feature_search_smoke.py  news_feature_hunt.py  news_feature_hunt_5h.sh  ops_autopilot.sh  start_agent_team.sh
tests/: test_backtest.py  test_cli_ops.py  test_colab_sync.py  test_config_cache.py  test_data_store_dates.py  test_fmp_api_key_resolution.py  test_fmp_client_retry.py  test_gbdt_model_io.py  test_labels.py  test_migrate.py  test_operations_status.py  test_pipeline_synth.py  test_reporting_errors.py  test_resume_state.py  test_transition_report.py  test_validation.py
(+949 files in other folders)
