[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gbdt-stock-agent"
version = "0.1.0"
description = "GBDT stock prediction agent with local-to-colab migration workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "requests>=2.28",
  "pyarrow>=12.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "tqdm>=4.66",
  "lightgbm>=4.0",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
